# mail-orchestrator

./: ARCHITECTURE.md  Cargo.toml  README.md  justfile
src/: config.rs  db.rs  main.rs  parser.rs  sender.rs
