[package]
name = "mail-orchestrator"
version = "0.1.0"
edition = "2021"
description = "Standalone email orchestration daemon for multi-identity Postfix+Dovecot mail servers"
license = "MIT"
repository = "https://github.com/plausiden/mail-orchestrator"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Email parsing (RFC 5322)
mail-parser = "0.9"

# Email sending
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder", "hostname"] }

# Maildir watching (inotify on Linux).
# Pinned to v8: drops the unmaintained `instant` transitive via notify-types
# (RUSTSEC-2024-0384). notify 9 is still pre-release (9.0.0-rc.2 as of
# 2026-04-06) — hold until stable per AVP-2 "no pre-release deps" rule.
notify = "8"

# Database (audit log, delivery tracking)
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }

# Templates
minijinja = "2"

# Scheduling
cron = "0.13"
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Message tracking
uuid = { version = "1", features = ["v4", "serde"] }

# Command parsing
regex = "1"

# Serialization
serde_json = "1"
